Jailhouse Driver: first commit with skeleton code
Adding virt-driver-jailhouse.m4

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -117,6 +117,7 @@ include vbox/Makefile.inc.am
 include openvz/Makefile.inc.am
 include qemu/Makefile.inc.am
 include bhyve/Makefile.inc.am
+include jailhouse/Makefile.inc.am
 include libxl/Makefile.inc.am
 include vz/Makefile.inc.am
 include lxc/Makefile.inc.am
